Improve translation system, add gendered roles for German

--- a/translations/game+intl-icu.de.xlf
+++ b/translations/game+intl-icu.de.xlf
@@ -3586,7 +3586,17 @@
       </notes>
       <segment>
         <source>Schamane</source>
-        <target>Schamane</target>
+        <target>
+            {ref__icu, select,
+                on {
+                    {ref__gender, select,
+                        female {Schamanin}
+                        other {Schamane}
+                    }
+                }
+                other {Schamane}
+            }
+        </target>
       </segment>
     </unit>
     <unit id="jYiPQYC" name="Einsiedler">
@@ -7042,7 +7052,17 @@
       </notes>
       <segment>
         <source>Reiseleiter in der Außenwelt</source>
-        <target>Reiseleiter in der Außenwelt</target>
+        <target>
+            {ref__icu, select,
+                on {
+                    {ref__gender, select,
+                        female {Reiseleiterin in der Außenwelt}
+                        other {Reiseleiter in der Außenwelt}
+                    }
+                }
+                other {Reiseleiter in der Außenwelt}
+            }
+        </target>
       </segment>
     </unit>
     <unit id="ti26S85" name="Dazu hast Du nicht das Recht.">
@@ -8845,7 +8865,17 @@
       </notes>
       <segment>
         <source>Der {rolename} der Stadt ist {username}</source>
-        <target>Der {rolename} der Stadt ist {username}</target>
+        <target>
+           {ref__icu, select,
+                on {
+                    {username__gender, select,
+                        female {Die {rolename} der Stadt ist {username}}
+                        other {Der {rolename} der Stadt ist {username}}
+                    }
+                }
+                other {Der {rolename} der Stadt ist {username}}
+            }
+        </target>
       </segment>
     </unit>
     <unit id="kg5BPH1" name="Status">
@@ -12792,7 +12822,7 @@
     </unit>
     <unit id="rEGk1G9" name="Meisterbastler ">
       <notes>
-        <note category="german">Meisterbastler </note>
+        <note category="german">Meisterbastler</note>
       </notes>
       <segment>
         <source>Meisterbastler </source>
@@ -14844,11 +14874,21 @@
     </unit>
     <unit id="yd0LZz9" name="Diese Bürger is der {role} der Stadt">
       <notes>
-        <note category="german">Diese Bürger is der {role} der Stadt</note>
+        <note category="german">Dieser Bürger ist der {role} der Stadt</note>
       </notes>
       <segment>
         <source>Diese Bürger is der {role} der Stadt</source>
-        <target>Diese Bürger is der {role} der Stadt</target>
+        <target>
+           {ref__icu, select,
+                on {
+                    {ref__gender, select,
+                        female {Diese Bürgerin ist die {role} der Stadt}
+                        other {Dieser Bürger ist der {role} der Stadt}
+                    }
+                }
+                other {Dieser Bürger ist der {role} der Stadt}
+            }
+        </target>
       </segment>
     </unit>
     <unit id="L2mGaV4" name="Expeditionen">
@@ -18027,7 +18067,7 @@
     </unit>
     <unit id="bhwk0Sz">
       <notes>
-        <note category="german">Dieser riesige gelbe Metallcontainer macht einen verlorenen Eindruck. Weit und breit keine Baustelle. Der Gemeinschaftsraum im Inneren ist mit leeren Bierflaschen übersät </note>
+        <note category="german">Dieser riesige gelbe Metallcontainer macht einen verlorenen Eindruck. Weit und breit keine Baustelle. Der Gemeinschaftsraum im Inneren ist mit leeren Bierflaschen übersät</note>
       </notes>
       <segment>
         <source>Dieser riesige gelbe Metallcontainer macht einen verlorenen Eindruck. Weit und breit keine Baustelle. Der Gemeinschaftsraum im Inneren ist mit leeren Bierflaschen übersät </source>
@@ -18036,7 +18076,7 @@
     </unit>
     <unit id="UezITiX">
       <notes>
-        <note category="german">Von wegen Döner macht schöner. Scheint so als hätte der Besitzer dieser Bude das mit den Dönern und den Spießen missverstanden. Wer hier reingeht kommt garantiert nicht mehr raus. </note>
+        <note category="german">Von wegen Döner macht schöner. Scheint so als hätte der Besitzer dieser Bude das mit den Dönern und den Spießen missverstanden. Wer hier reingeht kommt garantiert nicht mehr raus.</note>
       </notes>
       <segment>
         <source>Von wegen Döner macht schöner. Scheint so als hätte der Besitzer dieser Bude das mit den Dönern und den Spießen missverstanden. Wer hier reingeht kommt garantiert nicht mehr raus. </source>
