--- a/translations/game+intl-icu.de.xlf
+++ b/translations/game+intl-icu.de.xlf
@@ -6551,13 +6551,13 @@
         <target>Tagelang wurde an den Seelen der Toten herumgepfuscht.</target>
       </segment>
     </unit>
-    <unit id="S103XG1" name="@citizens Bürger">
+    <unit id="S103XG1" name="{citizens} Bürger">
       <notes>
-        <note category="german">@citizens Bürger</note>
+        <note category="german">{citizens} Bürger</note>
       </notes>
       <segment>
-        <source>@citizens Bürger</source>
-        <target>@citizens Bürger</target>
+        <source>{citizens} Bürger</source>
+        <target>{citizens} Bürger</target>
       </segment>
     </unit>
     <unit id="wjS3J8H">
@@ -19919,13 +19919,13 @@
         <target><![CDATA[Du bist bei deiner Aktion aufgeflogen! <strong>Deine Mitbürger wissen jetz Bescheid!</strong>]]></target>
       </segment>
     </unit>
-    <unit id="U4ZJpTo" name="@deads Tot">
+    <unit id="U4ZJpTo" name="{deads} Tot">
       <notes>
-        <note category="german">@deads Tot</note>
+        <note category="german">{deads} Tot</note>
       </notes>
       <segment>
-        <source>@deads Tot</source>
-        <target>@deads Tot</target>
+        <source>{deads} Tot</source>
+        <target>{deads} Tot</target>
       </segment>
     </unit>
     <unit id="r4KXho0">
