--- a/translations/game+intl-icu.en.xlf
+++ b/translations/game+intl-icu.en.xlf
@@ -5219,7 +5219,7 @@ Each upgrade brings various advantages (defence, water, special skills...).It's 
         <target>Danger</target>
       </segment>
     </unit>
-    <unit id="S103XG1" name="{citizens} Bürger">
+    <unit id="x7SDYp9" name="{citizens} Bürger">
       <notes>
         <note category="german">{citizens} Bürger</note>
       </notes>
@@ -19848,7 +19848,7 @@ Each upgrade brings various advantages (defence, water, special skills...).It's 
         <target><![CDATA[Your were spotted! <strong>The citizens have been warned!</strong>]]></target>
       </segment>
     </unit>
-    <unit id="U4ZJpTo" name="{deads} Tot">
+    <unit id="xMKSdFE" name="{deads} Tot">
       <notes>
         <note category="german">{deads} Tot</note>
       </notes>
