Added ES translation for issue #1338

--- a/translations/game+intl-icu.es.xlf
+++ b/translations/game+intl-icu.es.xlf
@@ -20235,7 +20235,7 @@
       </notes>
       <segment>
         <source>Wenn die Stadt eine Pumpe baut, ist sie im Stande mehr Wasser zu fördern!</source>
-        <target>Wenn die Stadt eine Pumpe baut, ist sie im Stande mehr Wasser zu fördern!</target>
+        <target>Construid una Bomba de Agua ¡y tendréis mucha más para beber!</target>
       </segment>
     </unit>
     <unit id="AyyQPWF">
@@ -20244,7 +20244,7 @@
       </notes>
       <segment>
         <source>Du kannst den Bau einer Pumpe im Bereich &lt;strong&gt;Konstruktionen&lt;/strong&gt; beginnen.</source>
-        <target><![CDATA[Du kannst den Bau einer Pumpe im Bereich <strong>Konstruktionen</strong> beginnen.]]></target>
+        <target><![CDATA[Puedes iniciar la construcción de una bomba en la sección <strong>Construcción</strong> en el Menú.]]></target>
       </segment>
     </unit>
     <unit id="mJl9hp7" name="{points} Punkt(e)">
