--- a/translations/game+intl-icu.en.xlf
+++ b/translations/game+intl-icu.en.xlf
@@ -20289,5 +20289,32 @@ Each upgrade brings various advantages (defence, water, special skills...).It's 
         <target><![CDATA[You can start building the pump by going to the <strong>Construction Sites</strong> area.]]></target>
       </segment>
     </unit>
+    <unit id="W8upWpv">
+      <notes>
+        <note category="german">Die Wandtafel ermöglicht altgedienten Helden, der ganzen Stadt Anweisungen zu geben.</note>
+      </notes>
+      <segment>
+        <source>Die Wandtafel ermöglicht altgedienten Helden, der ganzen Stadt Anweisungen zu geben.</source>
+        <target>The chalkboard allows veteran Heroes to give instructions to the rest of the community.</target>
+      </segment>
+    </unit>
+    <unit id="UQ10LbN">
+      <notes>
+        <note category="german">Diese Option steht dir ab sofort zur Verfügung, da du auf deiner Seelenseite den Diktatorbonus freigeschaltet hast.</note>
+      </notes>
+      <segment>
+        <source>Diese Option steht dir ab sofort zur Verfügung, da du auf deiner Seelenseite den Diktatorbonus freigeschaltet hast.</source>
+        <target>You can do this once you have unlocked the 'Dictator' advantage on your Soul page.</target>
+      </segment>
+    </unit>
+    <unit id="4Uzw2JG" name="Mehr darüber erfahren...">
+      <notes>
+        <note category="german">Mehr darüber erfahren...</note>
+      </notes>
+      <segment>
+        <source>Mehr darüber erfahren...</source>
+        <target>Read more...</target>
+      </segment>
+    </unit>
   </file>
 </xliff>
