--- a/translations/game+intl-icu.en.xlf
+++ b/translations/game+intl-icu.en.xlf
@@ -880,7 +880,11 @@
       </notes>
       <segment>
         <source>Du hast {num} anonyme Anzeige(n).</source>
-        <target>You have received {num} anonymous complaints.</target>
+        <target>{ref__icu, select, on {{num, plural, 
+        =0 {You have received no complaints.} 
+        one {You have recieved # anonymous complaint.} 
+        other {You have received # anonymous complaints.}}
+        } other {You have received {num} anonymous complaint(s).}}</target>
       </segment>
     </unit>
     <unit id="0drragL">
