--- a/translations/season+intl-icu.en.xlf
+++ b/translations/season+intl-icu.en.xlf
@@ -4,6 +4,8 @@
     <unit id="5av5KpC" name="Saison 0.14">
       <notes>
         <note category="german">Saison 0.14</note>
+        <note category="state">new</note>
+        <note category="from">db://Season</note>
       </notes>
       <segment>
         <source>Saison 0.14</source>
@@ -13,6 +15,7 @@
     <unit id="MKuQjMi" name="Saison 0.13">
       <notes>
         <note category="german">Saison 0.13</note>
+        <note category="from">db://Season</note>
       </notes>
       <segment>
         <source>Saison 0.13</source>
@@ -22,6 +25,7 @@
     <unit id="ZahwwoN" name="Saison 0.12">
       <notes>
         <note category="german">Saison 0.12</note>
+        <note category="from">db://Season</note>
       </notes>
       <segment>
         <source>Saison 0.12</source>
@@ -31,6 +35,7 @@
     <unit id="Qb8gU6v" name="Saison 0.11">
       <notes>
         <note category="german">Mysteriöse Saison</note>
+        <note category="from">db://Season</note>
       </notes>
       <segment>
         <source>Saison 0.11</source>
@@ -40,6 +45,7 @@
     <unit id="1_E.ytA" name="Saison 0.10">
       <notes>
         <note category="german">Mysteriöse Saison</note>
+        <note category="from">db://Season</note>
       </notes>
       <segment>
         <source>Saison 0.10</source>
@@ -49,6 +55,7 @@
     <unit id="oLxl2RQ" name="Saison 0.9">
       <notes>
         <note category="german">Mysteriöse Saison</note>
+        <note category="from">db://Season</note>
       </notes>
       <segment>
         <source>Saison 0.9</source>
@@ -58,6 +65,7 @@
     <unit id="ocnWude" name="Saison 0.8">
       <notes>
         <note category="german">Mysteriöse Saison</note>
+        <note category="from">db://Season</note>
       </notes>
       <segment>
         <source>Saison 0.8</source>
@@ -67,6 +75,7 @@
     <unit id="BbqgTUU" name="Saison 0.7">
       <notes>
         <note category="german">Nachtschicht</note>
+        <note category="from">db://Season</note>
       </notes>
       <segment>
         <source>Saison 0.7</source>
@@ -76,6 +85,7 @@
     <unit id="2py6hDF" name="Saison 0.6">
       <notes>
         <note category="german">????</note>
+        <note category="from">db://Season</note>
       </notes>
       <segment>
         <source>Saison 0.6</source>
@@ -85,6 +95,7 @@
     <unit id="UmYesiE" name="Saison 0.5">
       <notes>
         <note category="german">Seelenfrieden</note>
+        <note category="from">db://Season</note>
       </notes>
       <segment>
         <source>Saison 0.5</source>
@@ -94,6 +105,7 @@
     <unit id="R6v2_H_" name="Saison 0.4">
       <notes>
         <note category="german">Modernde Zeiten</note>
+        <note category="from">db://Season</note>
       </notes>
       <segment>
         <source>Saison 0.4</source>
@@ -103,6 +115,7 @@
     <unit id="YL.wVHS" name="Saison 0.3">
       <notes>
         <note category="german">Geburt der Ghule</note>
+        <note category="from">db://Season</note>
       </notes>
       <segment>
         <source>Saison 0.3</source>
@@ -112,6 +125,7 @@
     <unit id="OKCTySu" name="Saison 0.2">
       <notes>
         <note category="german">Rache der Verbannten</note>
+        <note category="from">db://Season</note>
       </notes>
       <segment>
         <source>Saison 0.2</source>
@@ -121,6 +135,7 @@
     <unit id="VwuJDaU" name="Saison 0.1">
       <notes>
         <note category="german">Galgenvögel</note>
+        <note category="from">db://Season</note>
       </notes>
       <segment>
         <source>Saison 0.1</source>
@@ -130,6 +145,8 @@
     <unit id="ffgTaDr" name="Saison 0.0">
       <notes>
         <note category="german">Saison 0.0</note>
+        <note category="state">new</note>
+        <note category="from">db://Season</note>
       </notes>
       <segment>
         <source>Saison 0.0</source>
