--- a/translations/game+intl-icu.fr.xlf
+++ b/translations/game+intl-icu.fr.xlf
@@ -862,7 +862,10 @@
       </notes>
       <segment>
         <source>Du hast {num} anonyme Anzeige(n).</source>
-        <target>Vous avez reçu {num} plaintes anonymes.</target>
+        <target>{ref__icu, select, on {{num, plural,
+        one {Vous avez reçu # plainte anonyme.} 
+        other {Vous avez reçu # plaintes anonymes.}}
+        } other {Vous avez reçu {num} plainte(s) anonyme(s).}}</target>
       </segment>
     </unit>
     <unit id="0drragL">
