--- a/translations/game+intl-icu.en.xlf
+++ b/translations/game+intl-icu.en.xlf
@@ -880,10 +880,7 @@
       </notes>
       <segment>
         <source>Du hast {num} anonyme Anzeige(n).</source>
-        <target>{ref__icu, select, on {{num, plural,
-        one {You have recieved # anonymous complaint.} 
-        other {You have received # anonymous complaints.}}
-        } other {You have received {num} anonymous complaint(s).}}</target>
+        <target>You have received {num} anonymous complaints.</target>
       </segment>
     </unit>
     <unit id="0drragL">
